--- a/SpringBootWithDocker/src/main/resources/application.properties
+++ b/SpringBootWithDocker/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 logging.level.org.springframework.web: DEBUG
 server.port=8080
+
+# SSL configuration details
+
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:selfsigned.jks
+# The password used to generate the certificate
+server.ssl.key-store-password=testapp
+# The alias mapped to the certificate
+server.ssl.key-alias=test
