--- a/SpringBootWithDocker/src/main/resources/application.properties
+++ b/SpringBootWithDocker/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 # SSL configuration details
 
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:selfsigned.jks
+#server.ssl.key-store=classpath:selfsigned.jks
 # The password used to generate the certificate
-server.ssl.key-store-password=testapp
+#server.ssl.key-store-password=testapp
 # The alias mapped to the certificate
-server.ssl.key-alias=test
+#server.ssl.key-alias=test
